@startuml
'https://plantuml.com/class-diagram

package domain{
package house{
class House {
    - _location: Location
    - _locationFactory: LocationFactory
    - _roomFactory; RoomFactory
    - _repository: Repository
    + House(repository: Repository,\nlocationFactory: LocationFactory, roomFactory: RoomFactory)
    + configureLocation(args): Location
    + getLocation(): Location
    + addRoom(name: String, houseFloor: String, \nheight: double, width: double, \ndeviceFactory : DeviceFactory, \ndimensionsFactory: DimensionsFactory): boolean
    + roomExists(name: String): boolean
    + getRooms(): List<Room>
    + getRoom(name: String): Room
    + getDevicesByRoomAndFunctionality( devicesByFuncionality:\nDevicesByFuncionality): Map <String, List<DeviceRoomDTO>>
    + toString(): String
}

class Location {
    - _street: String
    - _doorNumber: String
    - _zip: String
    - _city: String
    - _country: String
    - _gps: GPS
    + getStreet(): String
    + getDoorNumber(): String
    + getZip(): String
    + getCity(): String
    + getCountry(): String
    + getGPS(): GPS
    + configureLocation(args): boolean
}

class LocationFactory {
    + createLocation(args): Location
}
}
}
package controller{
class Ctrl01{
- _house : House
+ addRoomToHouse (roomDTO : RoomDTO) : boolean
}
}
note right of House
args: street: String, doorNumber: String,
zip: String, city: String,
country: String, latitude: double, longitude: double
end note

Ctrl01 "1" ..> "1" House : "uses"
House "1"  ..> "1" LocationFactory : "uses"
LocationFactory "1"  ..> "1" Location : "creates"
House "1"  --> "1" Location : "has"


@enduml